--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,9 @@
 const token = ''
+const clientId = ''
 
 module.exports {
   token,
+  clientId,
   apiUrl: `https://api.telegram.org/bot${token}`,
   apiFileUrl: `https://api.telegram.org/file/bot${token}`
 }
