Created userId in the .env for verifications

--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,11 @@
 const token = ''
-const clientId = ''
+const myId = ''
+const userId = ''
 
 module.exports {
   token,
-  clientId,
+  myId,
+  userId,
   apiUrl: `https://api.telegram.org/bot${token}`,
   apiFileUrl: `https://api.telegram.org/file/bot${token}`
 }
